--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,7 +21,8 @@
 .nav-right {
     padding-right: 10px;
     display: flex;
-    gap:5px;    
+    gap:5px;
+    align-items: center;
 }
 .nav-right a {
     color: var(--clr-fg);
